# MultimediaRetrieval

./: .gitattributes  .gitignore
MultimediaRetrieval/: shape-data-distributions.csv  shape-data.csv
MultimediaRetrieval/Assets/Materials/: WireframeMaterial.mat
MultimediaRetrieval/Assets/Prefabs/: ShapeCamera.prefab  ShapeRenderImage.prefab
MultimediaRetrieval/Assets/Scenes/: MainScene.unity
MultimediaRetrieval/Assets/Scripts/: Backend.cs  CameraMovement.cs  CameraRenderTexture.cs  OffMeshReader.cs  ShapeFilter.cs  ShapeViewer.cs  StaticWireframeRenderer.cs  Util.cs
MultimediaRetrieval/Backend/: database.db
MultimediaRetrieval/Backend/cache/: 1.off  10.off  100.off  101.off  102.off  103.off  104.off  105.off  106.off  107.off  109.off  11.off  110.off  111.off  112.off  113.off  115.off  116.off  12.off  120.off  121.off  122.off  123.off  124.off  125.off  126.off  128.off  129.off  13.off  130.off  131.off  132.off  133.off  134.off  135.off  136.off  137.off  138.off  139.off  14.off  (+311 more)
MultimediaRetrieval/Backend/originals/: 1.off  10.off  100.off  101.off  102.off  103.off  104.off  105.off  106.off  107.off  109.off  11.off  110.off  111.off  112.off  113.off  115.off  116.off  12.off  120.off  121.off  122.off  123.off  124.off  125.off  126.off  128.off  129.off  13.off  130.off  131.off  132.off  133.off  134.off  135.off  136.off  137.off  138.off  139.off  14.off  (+311 more)
MultimediaRetrieval/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
backend/: .gitignore  CMakeLists.txt  pmp_test.sln  pmp_test.vcxproj  pmp_test.vcxproj.filters
backend/src/: action.h  action_args.cpp  action_args.h  backend.cpp  config.h  database_mr.cpp  database_mr.h  evaluation.cpp  evaluation.h  feature_extraction.cpp  feature_extraction.h  feature_matching.cpp  feature_matching.h  features.cpp  features.h  normalization.cpp  normalization.h  preprocessing.cpp  preprocessing.h  remeshing.cpp  remeshing.h  util.cpp  util.h
backend/src/actions/: authors.cpp  authors.h  evaluate.cpp  evaluate.h  extract.cpp  extract.h  normalize.cpp  normalize.h  query.cpp  query.h  store.cpp  store.h  version.cpp  version.h
